z-index-fix
фікс для стікіхедера

--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -6,6 +6,7 @@
   inset: 0;
   visibility: hidden;
   pointer-events: none;
+  z-index: 1002;
 }
 
 .is-open {
